kubernetes/deploy/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
      release: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        release: bazarr
    spec:
      containers:
      - image: linuxserver/bazarr:latest
        imagePullPolicy: Always
        name: bazarr
        ports:
        - containerPort: 6767
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /movies
          name: movies
        - mountPath: /tv
          name: shows
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: hardware
                operator: In
                values:
                - credigree
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr
      - name: movies
        nfs:
          server: 192.168.100.41
          path: /volume1/Media/Movies
      - name: shows
        nfs:
          server: 192.168.100.41
          path: /volume1/Media/Shows
