kubernetes/deploy/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: bazarr
spec:
  rules:
  - host: bazarr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: bazarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
